# aeo-skill-marketplace

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  kill-claude-cache.sh  voice-keyprobe.sh  vpatch.sh  watch-claude-voice-debug.sh
.claude-plugin/: marketplace.json
aeo-agile-tools/.claude-plugin/: plugin.json
aeo-agile-tools/agents/: business-analyst.md  product-owner.md  project-manager.md  scrum-master.md
aeo-agile-tools/commands/: retrospective.md  sprint-planning.md
aeo-agile-tools/hooks/: README.md  hooks.json
aeo-architecture/.claude-plugin/: plugin.json
aeo-architecture/agents/: architect.md  code-archaeologist.md  performance-profiler.md  qa-engineer.md  security-reviewer.md  simple-architect.md  simple-architecture-documenter.md  system-designer.md
aeo-architecture/commands/: code-review.md  design-architecture.md  refactor-code.md
aeo-architecture/hooks/: README.md  hooks.json
aeo-claude/: README.md
aeo-claude/.claude-plugin/: plugin.json
aeo-claude/commands/: aeo-continuation-prompt.md  aeo-create-claude-prompt.md  aeo-repo-bootstrap.md  aeo-repo-sanitize.md  aeo-retro.md  aeo-review-claude-prompt.md
aeo-claude/hooks/: hooks.json
aeo-code-analysis/.claude-plugin/: plugin.json
aeo-code-analysis/agents/: tech-evaluator.md
aeo-deployment/.claude-plugin/: plugin.json
aeo-deployment/agents/: deployment-agent.md
aeo-deployment/commands/: deploy-checklist.md  rel-notes.md  (+1 more)
aeo-dev/: .gitignore
aeo-infra/: README.md
aeo-nous/: README.md
aeo-python/skills/python-cli-engineering/templates/: Makefile  pyproject.toml
aeo-requirements/: README.md
aeo-troubleshooting/: README.md
aeo-vsc-cc-sessions-sidecar/: README.md
(+358 files in other folders)
